cmake_minimum_required(VERSION 3.7)
project(CppTemplates)

set(CMAKE_CXX_STANDARD 11)

add_executable(2_4_1 chapter2_函数模板/2_4_1_重载函数模板.cpp)

add_executable(3_1_1 chapter3_类模板/3_1_1_类模板.cpp)
add_executable(3_3_1 chapter3_类模板/3_3_1_类模板的特化.cpp)
add_executable(3_4_1 chapter3_类模板/3_4_1_局部特化.cpp)
add_executable(3_5_1 chapter3_类模板/3_5_1_缺省模板实参.cpp)
